#1 and #2 issue test

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,5 +1,11 @@
 akka {
-  loglevel = warning
+  log-dead-letters-during-shutdown = off
+  loglevel = debug
+  log-dead-letters = off
+
+  actor {
+    debug.receive = true
+  }
 
   persistence {
     journal.plugin = "inmemory-journal"
