Conditional ability to perform full serialization while adding messages to journal

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -17,7 +17,7 @@ akka {
 }
 
 inmemory-journal {
-  doSerialize = off
+  full-serialization = off
   class = "akka.persistence.inmemory.journal.InMemoryJournal"
 }
 
