In-memory ReadJournal - dependency in SBT - reference.conf - empty journal implementation - test

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -16,6 +16,10 @@ akka {
 
 }
 
+inmemory-read-journal {
+  class = "akka.persistence.inmemory.query.InMemoryReadJournal"
+}
+
 inmemory-journal {
   class = "akka.persistence.inmemory.journal.InMemoryJournal"
 }
