Initial implemenation of Persistence Query for In Memory journal - supports single query - CurrentPersistenceIdsQuery - test names refactoring

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -17,7 +17,7 @@ akka {
 }
 
 inmemory-read-journal {
-  class = "akka.persistence.inmemory.query.InMemoryReadJournal"
+  class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
 }
 
 inmemory-journal {
