--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -26,3 +26,8 @@ akka {
     snapshot-store.plugin = "inmemory-snapshot-store"
   }
 }
+
+inmemory-read-journal {
+  refresh-interval = 100 millis
+}
+
