--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,20 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-akka {
-
+# the akka-persistence-journal in use
+jdbc-journal {
+  class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
 }
 
-inmemory-read-journal {
-  class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
-  refresh-interval = 3 seconds
-}
-
-inmemory-journal {
-  full-serialization = off
-  class = "akka.persistence.inmemory.journal.InMemoryJournal"
-}
-
-inmemory-snapshot-store {
+# the akka-persistence-snapshot-store in use
+jdbc-snapshot-store {
   class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
 }
+
+# the akka-persistence-query provider in use
+jdbc-read-journal {
+  class = "akka.persistence.inmemory.query.journal.JdbcReadJournalProvider"
+}
+
