--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -12,18 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# the akka-persistence-journal in use
-inmemory-journal {
-  class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
-}
-
-# the akka-persistence-snapshot-store in use
-//inmemory-snapshot-store {
-//  class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
-//}
-
-# the akka-persistence-query provider in use
-//inmemory-read-journal {
-//  class = "akka.persistence.inmemory.query.journal.JdbcReadJournalProvider"
-//}
+include "general.conf"
 
