--- a/src/test/resources/general.conf
+++ b/src/test/resources/general.conf
@@ -32,29 +32,7 @@ akka {
   }
 
   persistence {
-    journal.plugin = "jdbc-journal"
-    snapshot-store.plugin = "jdbc-snapshot-store"
+    journal.plugin = "inmemory-journal"
+//    snapshot-store.plugin = "inmemory-snapshot-store"
   }
-
-  extensions = ["akka.persistence.inmemory.extension.InMemoryDatabase"]
-}
-
-slick {
-  # Use ANSI color sequences in tree dumps
-  ansiDump = false
-
-  # Use Unicode box characters in tree and table dumps
-  unicodeDump = true
-
-  # Dump individual Select and Ref nodes instead of a single Path
-  dumpPaths = false
-
-  # Use multi-line, indented formatting for SQL statements
-  sqlIndent = true
-
-  # Verify types after each query compiler phase
-  verifyTypes = false
-
-  # Detect unnecessary rebuilding of the AST after every query compiler phase
-  detectRebuild = false
 }
