--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -22,8 +22,8 @@ inmemory-journal {
 //  class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
 //}
 
-# the akka-persistence-query provider in use
-//inmemory-read-journal {
-//  class = "akka.persistence.inmemory.query.journal.JdbcReadJournalProvider"
-//}
+//# the akka-persistence-query provider in use
+inmemory-read-journal {
+  class = "akka.persistence.inmemory.query.journal.InMemoryJournalProvider"
+}
 
