code based on akka-persistence-jdbc

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,9 +18,9 @@ inmemory-journal {
 }
 
 # the akka-persistence-snapshot-store in use
-//inmemory-snapshot-store {
-//  class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
-//}
+inmemory-snapshot-store {
+  class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
+}
 
 //# the akka-persistence-query provider in use
 inmemory-read-journal {
