--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,16 +1,24 @@
-# Copyright 2016 Dennis Vriend
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+akka {
+  stdout-loglevel = debug // defaults to WARNING can be disabled with off. The stdout-loglevel is only in effect during system startup and shutdown
+  log-dead-letters-during-shutdown = on
+  loglevel = debug
+  log-dead-letters = on
+  log-config-on-start = off // Log the complete configuration at INFO level when the actor system is started
 
-include "general.conf"
+  actor {
+    serialize-messages = on
 
+    debug {
+      receive = on // log all messages sent to an actor if that actors receive method is a LoggingReceive
+      autoreceive = off // log all special messages like Kill, PoisoffPill etc sent to all actors
+      lifecycle = off // log all actor lifecycle events of all actors
+      fsm = off // enable logging of all events, transitioffs and timers of FSM Actors that extend LoggingFSM
+      event-stream = off // enable logging of subscriptions (subscribe/unsubscribe) on the ActorSystem.eventStream
+    }
+  }
+
+  persistence {
+    journal.plugin = "inmemory-journal"
+    snapshot-store.plugin = "inmemory-snapshot-store"
+  }
+}
