persistenceIds and eventsByPid APIs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -27,7 +27,7 @@ inmemory-read-journal {
   class = "akka.persistence.inmemory.query.journal.InMemoryJournalProvider"
 
   # New events are retrieved (polled) with this interval.
-  refresh-interval = "300 millis"
+  refresh-interval = "1s"
 
   # How many events to fetch in one query (replay) and keep buffered until they
   # are delivered downstreams.
