--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -36,3 +36,8 @@ akka {
     snapshot-store.plugin = "inmemory-snapshot-store"
   }
 }
+
+inmemory-read-journal {
+  # New events are retrieved (polled) with this interval.
+  refresh-interval = "300ms"
+}
