--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,6 +19,9 @@ akka {
   log-dead-letters = on
   log-config-on-start = off // Log the complete configuration at INFO level when the actor system is started
 
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
   actor {
     serialize-messages = off // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
 
