snap and journal

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,11 +15,13 @@
 # the akka-persistence-journal in use
 inmemory-journal {
   class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
+  ask-timeout = "10s"
 }
 
 # the akka-persistence-snapshot-store in use
 inmemory-snapshot-store {
   class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
+  ask-timeout = "10s"
 }
 
 inmemory-read-journal {
@@ -31,6 +33,6 @@ inmemory-read-journal {
 
   # How many events to fetch in one query (replay) and keep buffered until they
   # are delivered downstreams.
-  max-buffer-size = "500"
+  max-buffer-size = "100"
 }
 
