--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,18 +15,25 @@
 # the akka-persistence-journal in use
 inmemory-journal {
   class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
+
+  # ask timeout on Futures
   ask-timeout = "10s"
 }
 
 # the akka-persistence-snapshot-store in use
 inmemory-snapshot-store {
   class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
+
+  # ask timeout on Futures
   ask-timeout = "10s"
 }
 
 inmemory-read-journal {
   # Implementation class of the InMemory ReadJournalProvider
-  class = "akka.persistence.inmemory.query.journal.InMemoryJournalProvider"
+  class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
+
+  # ask timeout on Futures
+  ask-timeout = "10s"
 
   # New events are retrieved (polled) with this interval.
   refresh-interval = "1s"
