--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -43,4 +43,8 @@ akka {
 inmemory-read-journal {
   # New events are retrieved (polled) with this interval.
   refresh-interval = "300ms"
+
+  # How many events to fetch in one query (replay) and keep buffered until they
+  # are delivered downstreams.
+  max-buffer-size = "100"
 }
