--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -35,6 +35,9 @@ inmemory-read-journal {
   # ask timeout on Futures
   ask-timeout = "10s"
 
+  # New events are retrieved (polled) with this interval.
+  refresh-interval = "100ms"
+
   # How many events to fetch in one query (replay) and keep buffered until they
   # are delivered downstreams.
   max-buffer-size = "100"
