--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -14,9 +14,9 @@
 
 akka {
   stdout-loglevel = off // defaults to WARNING can be disabled with off. The stdout-loglevel is only in effect during system startup and shutdown
-  log-dead-letters-during-shutdown = on
-  loglevel = DEBUG
-  log-dead-letters = on
+  log-dead-letters-during-shutdown = off
+  loglevel = debug
+  log-dead-letters = off
   log-config-on-start = off // Log the complete configuration at INFO level when the actor system is started
 
   loggers = ["akka.event.slf4j.Slf4jLogger"]
