Fix bug: It doesn't adapt events read from journal.

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -48,3 +48,16 @@ inmemory-read-journal {
   # are delivered downstreams.
   max-buffer-size = "100"
 }
+
+event-adapters {
+  event-adapters {
+    test-write-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestWriteEventAdapter"
+    test-read-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestReadEventAdapter"
+  }
+  event-adapter-bindings {
+    "akka.persistence.inmemory.query.EventAdaptersTest$Event" = test-write-event-adapter
+    "akka.persistence.inmemory.query.EventAdaptersTest$EventAdapted" = test-read-event-adapter
+  }
+}
+
+inmemory-journal = ${event-adapters}
