EventAdapters for the inmemory-read-journal

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,6 +32,9 @@ inmemory-read-journal {
   # Implementation class of the InMemory ReadJournalProvider
   class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
 
+  # Absolute path to the write journal plugin configuration section
+  write-plugin = "inmemory-journal"
+
   # ask timeout on Futures
   ask-timeout = "10s"
 
