--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -40,9 +40,23 @@ akka {
   }
 }
 
+inmemory-journal {
+    event-adapters {
+      test-write-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestWriteEventAdapter"
+      test-read-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestReadEventAdapter"
+    }
+    event-adapter-bindings {
+      "akka.persistence.inmemory.query.EventAdaptersTest$Event" = test-write-event-adapter
+      "akka.persistence.inmemory.query.EventAdaptersTest$EventAdapted" = test-read-event-adapter
+    }
+}
+
 inmemory-read-journal {
   # New events are retrieved (polled) with this interval.
   refresh-interval = "100ms"
+
+  # Absolute path to the write journal plugin configuration section
+  write-plugin = "inmemory-journal"
 
   # How many events to fetch in one query (replay) and keep buffered until they
   # are delivered downstreams.
