--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,8 +32,15 @@ inmemory-read-journal {
   # Implementation class of the InMemory ReadJournalProvider
   class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
 
-  # Absolute path to the write journal plugin configuration section
+  # Absolute path to the write journal plugin configuration section to get the event adapters from
   write-plugin = "inmemory-journal"
+
+  # there are two modes; sequence or uuid. If set to "sequence" and NoOffset will be requested, then
+  # the query will return Sequence offset types. If set to "uuid" and NoOffset will be requested, then
+  # the query will return TimeBasedUUID offset types. When the query is called with Sequence then
+  # the query will return Sequence offset types and if the query is called with TimeBasedUUID types then
+  # the query will return TimeBasedUUID offset types.
+  offset-mode = "sequence"
 
   # ask timeout on Futures
   ask-timeout = "10s"
