moved back from monolithic repo to its own repo, is way better

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -49,16 +49,24 @@ inmemory-journal {
       "akka.persistence.inmemory.query.EventAdaptersTest$Event" = test-write-event-adapter
       "akka.persistence.inmemory.query.EventAdaptersTest$EventAdapted" = test-read-event-adapter
     }
+
+  circuit-breaker {
+    max-failures = 10
+    call-timeout = 600s
+    reset-timeout = 30s
+  }
 }
 
 inmemory-read-journal {
   # New events are retrieved (polled) with this interval.
   refresh-interval = "100ms"
 
+  offset-mode = "sequence"
+
   # Absolute path to the write journal plugin configuration section
   write-plugin = "inmemory-journal"
 
   # How many events to fetch in one query (replay) and keep buffered until they
   # are delivered downstreams.
-  max-buffer-size = "100"
+  max-buffer-size = "5000"
 }
