--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -35,11 +35,15 @@ inmemory-read-journal {
   # Absolute path to the write journal plugin configuration section to get the event adapters from
   write-plugin = "inmemory-journal"
 
-  # there are two modes; sequence or uuid. If set to "sequence" and NoOffset will be requested, then
-  # the query will return Sequence offset types. If set to "uuid" and NoOffset will be requested, then
-  # the query will return TimeBasedUUID offset types. When the query is called with Sequence then
-  # the query will return Sequence offset types and if the query is called with TimeBasedUUID types then
-  # the query will return TimeBasedUUID offset types.
+  # there are two modes; 'sequence' or 'uuid'.
+  #
+  # | mode     | offset        | description                                      |
+  # | -------- | --------------| ------------------------------------------------ |
+  # | sequence | NoOffset      | the query will return Sequence offset types      |
+  # | sequence | Sequence      | the query will return Sequence offset types      |
+  # | uuid     | NoOffset      | the query will return TimeBasedUUID offset types |
+  # | uuid     | TimeBasedUUID | the query will return TimeBasedUUID offset types |
+  #
   offset-mode = "sequence"
 
   # ask timeout on Futures
