persistence-query-tag

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -41,15 +41,9 @@ akka {
 }
 
 inmemory-journal {
-    event-adapters {
-      test-write-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestWriteEventAdapter"
-      test-read-event-adapter = "akka.persistence.inmemory.query.EventAdaptersTest$TestReadEventAdapter"
-    }
-    event-adapter-bindings {
-      "akka.persistence.inmemory.query.EventAdaptersTest$Event" = test-write-event-adapter
-      "akka.persistence.inmemory.query.EventAdaptersTest$EventAdapted" = test-read-event-adapter
-    }
 
+
+  // for some unit tests
   circuit-breaker {
     max-failures = 10
     call-timeout = 600s
