--- a/project/build.properties
+++ b/project/build.properties
@@ -13,4 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-sbt.version=0.13.13
+# https://github.com/sbt/sbt/releases
+# https://groups.google.com/forum/#!topic/sbt-dev/iu6qT12R6q0
+sbt.version=0.13.14-RC2
