no serializer for internal plugin messages

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -23,11 +23,13 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   actor {
-    serialize-messages = off // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
+    serialize-messages = on // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
 
     debug {
-      receive = on // log all messages sent to an actor if that actors receive method is a LoggingReceive
-      autoreceive = off // log all special messages like Kill, PoisoffPill etc sent to all actors
+      unhandled = on // enable DEBUG logging of unhandled messages
+      router-misconfiguration = on // enable WARN logging of misconfigured routers
+      receive = on // log at DEBUG level all messages sent to an actor if that actors receive method is a LoggingReceive
+      autoreceive = off // enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill et.c.)
       lifecycle = off // log all actor lifecycle events of all actors
       fsm = off // enable logging of all events, transitioffs and timers of FSM Actors that extend LoggingFSM
       event-stream = off // enable logging of subscriptions (subscribe/unsubscribe) on the ActorSystem.eventStream
