--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -23,7 +23,7 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   actor {
-    serialize-messages = off // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
+    serialize-messages = on // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
 
     debug {
       receive = on // log all messages sent to an actor if that actors receive method is a LoggingReceive
