Makes storage extension plugable

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -57,3 +57,9 @@ inmemory-read-journal {
   max-buffer-size = "100"
 }
 
+# the storage in use
+inmemory-storage {
+  # default storage using direct inmemory journals
+  class = "akka.persistence.inmemory.extension.StorageExtensionImpl"
+}
+
