--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -12,18 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-akka {
+pekko {
   stdout-loglevel = off // defaults to WARNING can be disabled with off. The stdout-loglevel is only in effect during system startup and shutdown
   log-dead-letters-during-shutdown = off
   loglevel = debug
   log-dead-letters = off
   log-config-on-start = off // Log the complete configuration at INFO level when the actor system is started
 
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  loggers = ["org.apache.pekko.event.slf4j.Slf4jLogger"]
+  logging-filter = "org.apache.pekko.event.slf4j.Slf4jLoggingFilter"
 
   actor {
-    serialize-messages = off // when on, the akka framework will determine whether or not messages can be serialized, else the plugin
+    serialize-messages = off // when on, the pekko framework will determine whether or not messages can be serialized, else the plugin
 
     debug {
       unhandled = on // enable DEBUG logging of unhandled messages
