--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,17 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# the akka-persistence-journal in use
+# the pekko-persistence-journal in use
 inmemory-journal {
-  class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
+  class = "org.apache.pekko.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
 
   # ask timeout on Futures
   ask-timeout = "10s"
 }
 
-# the akka-persistence-snapshot-store in use
+# the pekko-persistence-snapshot-store in use
 inmemory-snapshot-store {
-  class = "akka.persistence.inmemory.snapshot.InMemorySnapshotStore"
+  class = "org.apache.pekko.persistence.inmemory.snapshot.InMemorySnapshotStore"
 
   # ask timeout on Futures
   ask-timeout = "10s"
@@ -30,7 +30,7 @@ inmemory-snapshot-store {
 
 inmemory-read-journal {
   # Implementation class of the InMemory ReadJournalProvider
-  class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
+  class = "org.apache.pekko.persistence.inmemory.query.InMemoryReadJournalProvider"
 
   # Absolute path to the write journal plugin configuration section to get the event adapters from
   write-plugin = "inmemory-journal"
@@ -60,6 +60,6 @@ inmemory-read-journal {
 # the storage in use
 inmemory-storage {
   # default storage using direct inmemory journals
-  class = "akka.persistence.inmemory.extension.StorageExtensionImpl"
+  class = "org.apache.pekko.persistence.inmemory.extension.StorageExtensionImpl"
 }
 
