--- a/src/test/resources/storage-by-property.conf
+++ b/src/test/resources/storage-by-property.conf
@@ -17,14 +17,14 @@ include "application"
 # the storage in use
 inmemory-storage {
   # storage using inmemory journal for each different value for the configured property keys
-  class = "akka.persistence.inmemory.extension.StorageExtensionByProperty"
+  class = "org.apache.pekko.persistence.inmemory.extension.StorageExtensionByProperty"
   # property keys in journal plugin configuration, for each different value a own journal will be stored
   property-keys = ["keyspace"]
 }
 
 inmemory-journal-some-other {
   keyspace = "someKeyspace"
-  class = "akka.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
+  class = "org.apache.pekko.persistence.inmemory.journal.InMemoryAsyncWriteJournal"
   ask-timeout = "10s"
   circuit-breaker {
     max-failures = 10
@@ -35,7 +35,7 @@ inmemory-journal-some-other {
 
 inmemory-read-journal-some-other {
   keyspace = "someKeyspace"
-  class = "akka.persistence.inmemory.query.InMemoryReadJournalProvider"
+  class = "org.apache.pekko.persistence.inmemory.query.InMemoryReadJournalProvider"
   write-plugin = "inmemory-journal"
   offset-mode = "sequence"
   ask-timeout = "10s"
