fix push to packages repo
Signed-off-by: Stanchev Aleksandar <aleksandar.stanchev@bosch.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,5 @@ jobs:
       - name: Publish
         run: sbt clean +publish
         env:
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USER: ${{ secrets.USER }}
+          PACKAGES_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
